* We have added the following predicates and functions to the digraph module:

  - return_vertices_in_from_to_order/2
  - return_vertices_in_to_from_order/2
  - return_sccs_in_from_to_order/1
  - return_sccs_in_to_from_order/1

* We have added the following predicates and functions to the bag module:

  - singleton/1
  - insert_duplicates/4
  - det_insert_duplicates/4
  - det_insert_duplicates/3

Changes to the Mercury compiler:

* We have extended tail call optimization from self recursive calls only
  to mutually recursive calls as well, when generating high level C code,
  C# code, or Java code. (The compiler has long been able apply tail call
  optimization to mutually recursive calls when generating low level C code.)

* We have added a new option --warn-dead-preds. While the existing option
  --warn-dead-procs asks the compiler to generate warnings for every
  unused procedure of the module being compiled, the new option asks
  the compiler to generate a warning for an unused procedure only if
  none of the procedures of a predicate or function is used.

* We have added a new option --warn-implicit-stream-calls, which asks
  the compiler to generate a warning for every call to a predicate p/n
  if there is also a predicate p/(n+1) which differs from p/n only in that
  it has additional argument at the front of its argument list that specifies
  an I/O stream. This is intended to generate warnings for calls to predicates
  such as io.write_string/3, which writes to the current output stream,
  to encourage programmers to call io.write_string/4 instead. If the option
  is given, the compiler will also generate warnings for calls to predicates
  such as io.see, io.seen, io.tell and io.told, which set the current input
  or output streams respectively.

* We have added a new option --warn-non-contiguous-decls, which asks
  the compiler to generate a warning if the mode declaration(s) of a
  predicate or function don't immediately follow its ":- pred" or ":- func"