@@ -1,0 +1,19 @@
+Bitmap: 
+^ byte(-1): bitmap.byte: byte index -1 is out of bounds [0, 0).
+^ byte(0): bitmap.byte: byte index 0 is out of bounds [0, 0).
+^ byte(1): bitmap.byte: byte index 1 is out of bounds [0, 0).
+
+Bitmap: 00000000.00000000.00000000
+^ byte(-1): bitmap.byte: byte index -1 is out of bounds [0, 3).
+^ byte(0): 0
+^ byte(1): 0
+^ byte(2): 0
+^ byte(3): bitmap.byte: byte index 3 is out of bounds [0, 3).
+^ byte(4): bitmap.byte: byte index 4 is out of bounds [0, 3).
+
+Bitmap: 00000000.00000000.0
+^ byte(-1): bitmap.byte: byte index -1 is out of bounds [0, 2).
+^ byte(0): 0
+^ byte(1): 0
+^ byte(2): bitmap.byte: byte index 2 is out of bounds [0, 2).
+^ byte(3): bitmap.byte: byte index 3 is out of bounds [0, 2).
